# multi-pod-demo-wasm

./: README.md  deployment.yaml
name-greeter-pod/src/: main.rs
name-splitter-pod/: Cargo.toml
name-splitter-pod/src/: main.rs
